bump src/bin level to JDK 11, drop dependency on xmlresolver, remove dependency on JDK internal APIs
Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>